--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Coeur Ouvert</title>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
+
+<!-- Fonts Google -->
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Merriweather&family=Montserrat:wght@700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
+
 <style>
   :root {
     --gold-accent: #f5a623;
@@ -29,8 +32,6 @@
     align-items: center;
     justify-content: center;
     gap: 15px;
-    flex-wrap: wrap;
-    text-align: center;
   }
   header img.logo {
     height: 70px;
@@ -44,16 +45,21 @@
     color: var(--text-color);
   }
   header p.slogan {
-    width: 100%;
-    font-family: 'Merriweather', serif;
-    font-size: 1.3rem;
-    color: #8B4B4B;
-    margin-top: -10px;
+    font-family: 'Dancing Script', cursive;
+    font-size: 1.15rem;
+    color: #B33A3A;
+    margin-top: 4px;
     margin-bottom: 0;
+    letter-spacing: 0.5px;
+    text-align: center;
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
   }
+
   nav {
     max-width: 900px;
-    margin: 0 auto 40px;
+    margin: 20px auto 40px;
     padding: 0 20px;
   }
   .menu {
@@ -91,6 +97,7 @@
     overflow: visible;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.12); /* Ombre douce verticale au centre */
   }
+
   #daily-verse::before {
     content: "";
     position: absolute;
@@ -104,6 +111,7 @@
     background: radial-gradient(circle, rgba(255, 206, 102, 0.4) 0%, transparent 70%);
     z-index: -1;
   }
+
   main {
     max-width: 900px;
     margin: 0 auto;
@@ -124,16 +132,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    /* Animation fade-in initiale cachée */
     opacity: 0;
-    transform: translateY(15px);
-    transition: opacity 1.2s ease, transform 1.2s ease;
+    animation: fadeIn 1.5s forwards;
   }
-  .section-block.visible {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  /* Animation delay for fadeIn on each section */
+  .section-block:nth-child(1) { animation-delay: 0.3s; }
+  .section-block:nth-child(2) { animation-delay: 0.6s; }
+  .section-block:nth-child(3) { animation-delay: 0.9s; }
+
   .section-block h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -158,30 +164,51 @@
     text-align: center;
     margin-top: auto;
   }
+
+  /* Boutons */
+
   .btn-row {
     max-width: 900px;
-    margin: 0 auto 50px;
+    margin: 40px auto 50px;
     display: flex;
     justify-content: center;
     gap: 30px;
   }
+
   .btn {
-    background-color: var(--gold-accent);
-    color: white;
     font-weight: 600;
     font-size: 1.1rem;
     padding: 15px 35px;
     border-radius: 40px;
     text-decoration: none;
-    box-shadow: 0 5px 15px rgb(245 166 35 / 0.5);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
   }
-  .btn:hover,
-  .btn:focus {
-    background-color: #d48b0d;
-    box-shadow: 0 6px 20px rgb(212 139 13 / 0.7);
+
+  .btn-yellow {
+    background-color: #F7D27B; /* jaune pâle */
+    color: #3b2e00;
+    box-shadow: 0 5px 15px rgba(247, 210, 123, 0.5);
+  }
+  .btn-yellow:hover,
+  .btn-yellow:focus {
+    background-color: #e9c85d;
+    box-shadow: 0 6px 20px rgba(233, 200, 93, 0.7);
     outline: none;
   }
+
+  .btn-green {
+    background-color: #7BBF7B; /* vert doux */
+    color: white;
+    box-shadow: 0 5px 15px rgba(123, 191, 123, 0.5);
+  }
+  .btn-green:hover,
+  .btn-green:focus {
+    background-color: #6aaa6a;
+    box-shadow: 0 6px 20px rgba(106, 170, 106, 0.7);
+    outline: none;
+  }
+
   footer {
     text-align: center;
     padding: 20px 0;
@@ -195,6 +222,12 @@
   footer a:hover {
     text-decoration: underline;
   }
+
+  /* Animation keyframes */
+  @keyframes fadeIn {
+    to { opacity: 1; }
+  }
+
   @media (max-width: 900px) {
     .section-block {
       flex: 1 1 45%;
@@ -205,7 +238,6 @@
     header {
       flex-direction: column;
       gap: 10px;
-      text-align: center;
     }
     header h1 {
       font-size: 2.4rem;
@@ -226,15 +258,6 @@
     .section-block img {
       height: auto;
     }
-    .btn-row {
-      flex-direction: column;
-      gap: 15px;
-    }
-    .btn {
-      width: 100%;
-      max-width: 300px;
-      text-align: center;
-    }
   }
 </style>
 </head>
@@ -243,8 +266,9 @@
   <header>
     <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
     <h1>Coeur Ouvert</h1>
-    <p class="slogan">Un espace pour parler, être écouté, et retrouver l’espoir</p>
   </header>
+
+  <p class="slogan">Un espace pour parler, être écouté, et retrouver l’espoir</p>
 
   <nav>
     <ul class="menu">
@@ -289,8 +313,8 @@
     </div>
 
     <div class="btn-row">
-      <a href="coaching.html" class="btn">Parler à un conseiller</a>
-      <a href="temoignages.html" class="btn">Lire des témoignages</a>
+      <a href="coaching.html" class="btn btn-yellow">Parler à un conseiller</a>
+      <a href="temoignages.html" class="btn btn-green">Lire des témoignages</a>
     </div>
   </main>
 
@@ -321,20 +345,6 @@
           document.getElementById("daily-verse").textContent =
             "Impossible de charger le verset du jour.";
         });
-    });
-
-    // Intersection Observer : fade-in uniquement sur les sections images + textes
-    function onEntry(entry) {
-      entry.forEach(change => {
-        if (change.isIntersecting) {
-          change.target.classList.add('visible');
-        }
-      });
-    }
-    let options = { threshold: [0.3] }; // déclenche un peu plus tard
-    let observer = new IntersectionObserver(onEntry, options);
-    document.querySelectorAll('.section-block').forEach(block => {
-      observer.observe(block);
     });
   </script>
 
