--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   header p.slogan {
     font-family: 'Dancing Script', cursive;
     font-size: 1.15rem;
-    color: #B33A3A;
+    color: #994422; /* un brun vif mais pas flashy */
     margin-top: 4px;
     margin-bottom: 0;
     letter-spacing: 0.5px;
@@ -186,26 +186,26 @@
   }
 
   .btn-yellow {
-    background-color: #F7D27B; /* jaune pâle */
-    color: #3b2e00;
-    box-shadow: 0 5px 15px rgba(247, 210, 123, 0.5);
+    background-color: #F9D976; /* jaune vif mais doux */
+    color: #5a4200;
+    box-shadow: 0 5px 15px rgba(249, 217, 118, 0.5);
   }
   .btn-yellow:hover,
   .btn-yellow:focus {
-    background-color: #e9c85d;
-    box-shadow: 0 6px 20px rgba(233, 200, 93, 0.7);
+    background-color: #f7c948;
+    box-shadow: 0 6px 20px rgba(247, 201, 72, 0.7);
     outline: none;
   }
 
   .btn-green {
-    background-color: #7BBF7B; /* vert doux */
+    background-color: #88C070; /* vert vif mais doux */
     color: white;
-    box-shadow: 0 5px 15px rgba(123, 191, 123, 0.5);
+    box-shadow: 0 5px 15px rgba(136, 192, 112, 0.5);
   }
   .btn-green:hover,
   .btn-green:focus {
-    background-color: #6aaa6a;
-    box-shadow: 0 6px 20px rgba(106, 170, 106, 0.7);
+    background-color: #72ad5a;
+    box-shadow: 0 6px 20px rgba(114, 173, 90, 0.7);
     outline: none;
   }
 
