--- a/index.html
+++ b/index.html
@@ -5,97 +5,136 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Coeur Ouvert</title>
 
-<!-- Fonts Google -->
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Merriweather&family=Montserrat:wght@700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Dancing+Script&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" />
 
 <style>
   :root {
     --gold-accent: #f5a623;
+    --gold-pale: #f9e8a1; /* jaune pâle doux */
+    --green-pale: #9ccc7a; /* vert pâle doux */
     --blue-main: #2a6ebb;
     --gray-light: #f7f7f7;
     --text-color: #000000;
+    --muted: #666666;
+    --slogan-color: #8b4c4c; /* un brun plus foncé et moins calligraphique */
   }
-  * {
-    margin: 0; padding: 0; box-sizing: border-box;
-  }
+
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+
   body {
     font-family: 'Open Sans', sans-serif;
-    background: white;
+    background: linear-gradient(180deg, #ffffff 0%, #fbfbfb 100%);
     color: var(--text-color);
     line-height: 1.6;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
   }
+
   header {
     max-width: 900px;
-    margin: 40px auto 10px;
+    margin: 36px auto 8px;
     padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    gap: 18px;
+    flex-wrap: wrap;
+    text-align: center;
+    animation: fadeInUp .6s ease both;
   }
+
   header img.logo {
-    height: 70px;
+    height: 80px;
+    width: auto;
     flex-shrink: 0;
   }
+
   header h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Playfair Display', serif;
     font-weight: 700;
-    font-size: 3.2rem;
-    letter-spacing: 2px;
+    font-size: 3.8rem;
+    letter-spacing: 1.5px;
     color: var(--text-color);
+    line-height: 1;
   }
+
   header p.slogan {
+    width: 100%;
     font-family: 'Dancing Script', cursive;
-    font-size: 1.15rem;
-    color: #994422; /* brun vif mais pas flashy */
-    margin-top: 4px;
+    font-size: 1.25rem;
+    color: var(--slogan-color);
+    margin-top: -8px;  /* plus proche du titre */
     margin-bottom: 0;
-    letter-spacing: 0.5px;
-    text-align: center;
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
+    letter-spacing: 0.02em;
   }
 
   nav {
     max-width: 900px;
-    margin: 20px auto 40px;
+    margin: 16px auto 28px;
     padding: 0 20px;
+    animation: fadeInUp .65s ease both;
   }
+
   .menu {
     list-style: none;
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 36px;
+    align-items: center;
   }
+
   .menu li a {
     color: var(--text-color);
     font-weight: 600;
-    font-size: 1.1em;
+    font-size: 1.05rem;
     text-decoration: none;
-    transition: color 0.3s ease;
+    padding: 6px 4px;
+    position: relative;
+    transition: color .22s ease;
   }
+
+  .menu li a::after {
+    content: "";
+    height: 2px;
+    width: 0;
+    background: var(--gold-accent);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -6px;
+    transition: width .22s ease;
+    border-radius: 2px;
+  }
+
   .menu li a:hover,
   .menu li a:focus {
     color: var(--gold-accent);
     outline: none;
   }
+
+  .menu li a:hover::after,
+  .menu li a:focus::after {
+    width: 60%;
+  }
+
   #daily-verse {
     max-width: 900px;
-    margin: 0 auto 50px;
-    padding: 20px 30px;
+    margin: 0 auto 42px;
+    padding: 20px 28px;
     font-style: italic;
     font-weight: 400;
-    font-size: 1.4rem;
-    color: #5a2e00; /* marron foncé */
-    background-image: linear-gradient(to right, white 15%, #FFDB8C 50%, white 85%);
+    font-size: 1.28rem;
+    color: #5a2e00;
+    background-image: linear-gradient(to right, white 14%, #FFECB9 50%, white 86%);
     border-radius: 12px;
     font-family: Georgia, serif;
     text-align: center;
     position: relative;
     z-index: 1;
     overflow: visible;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.12); /* Ombre douce verticale au centre */
+    box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+    animation: fadeInUp .7s ease both;
   }
 
   #daily-verse::before {
@@ -104,172 +143,188 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
-    height: 80%;
-    pointer-events: none;
+    width: 64%;
+    height: 76%;
     border-radius: 12px;
-    background: radial-gradient(circle, rgba(255, 206, 102, 0.4) 0%, transparent 70%);
+    background: radial-gradient(circle, rgba(255,222,146,0.45) 0%, transparent 60%);
     z-index: -1;
+    pointer-events: none;
+  }
+
+  #daily-verse::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 58%;
+    height: 18px;
+    border-radius: 50%;
+    background: rgba(0,0,0,0.12);
+    filter: blur(8px);
+    z-index: -2;
+    pointer-events: none;
   }
 
   main {
     max-width: 900px;
-    margin: 0 auto;
-    padding: 0 20px 40px;
+    margin: 0 auto 56px;
+    padding: 0 20px;
   }
+
+  .intro {
+    background: var(--gray-light);
+    border-radius: 12px;
+    padding: 22px;
+    margin-bottom: 30px;
+    text-align: center;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.03);
+    animation: fadeInUp .75s ease both;
+  }
+
+  .intro p { margin-bottom: 12px; color: #222; }
+  .intro p.lead { font-weight: 600; font-size: 1.05rem; color: #111; }
+
   .flex-row {
     display: flex;
-    justify-content: space-between;
     gap: 20px;
+    justify-content: space-between;
+    align-items: flex-start;
     flex-wrap: wrap;
   }
+
   .section-block {
     background: var(--gray-light);
-    border-radius: 15px;
-    padding: 15px;
-    flex: 1 1 28%;
-    box-shadow: 0 6px 15px rgb(0 0 0 / 0.05);
+    border-radius: 14px;
+    padding: 14px;
+    flex: 1 1 30%;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.04);
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 220px;
+    transition: transform .4s ease, box-shadow .4s ease, opacity 1.8s ease;
     opacity: 0;
-    animation: fadeIn 1.5s forwards;
+    transform: translateY(10px);
   }
-  /* Animation delay for fadeIn on each section */
-  .section-block:nth-child(1) { animation-delay: 0.3s; }
-  .section-block:nth-child(2) { animation-delay: 0.6s; }
-  .section-block:nth-child(3) { animation-delay: 0.9s; }
+
+  /* Fade-in animation trigger class */
+  .section-block.visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
 
   .section-block h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    font-size: 1.6rem;
+    font-size: 1.35rem;
     margin-bottom: 10px;
-    color: var(--text-color);
     text-align: center;
+    color: var(--text-color);
   }
+
   .section-block img {
     width: 100%;
     max-width: 260px;
-    border-radius: 12px;
-    object-fit: contain;
-    margin-bottom: 10px;
-    height: auto;
+    border-radius: 10px;
+    object-fit: cover;
+    height: 160px;
+    margin-bottom: 12px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.06);
   }
+
   .section-block p {
-    font-weight: 400;
-    font-size: 1rem;
-    color: #222222;
-    line-height: 1.5;
+    font-size: 0.995rem;
+    color: #222;
     text-align: center;
     margin-top: auto;
   }
 
-  /* Boutons */
-
+  /* Boutons sous la mission */
   .btn-row {
     max-width: 900px;
-    margin: 40px auto 50px;
+    margin: 20px auto 56px;
+    padding: 0 20px;
     display: flex;
+    gap: 18px;
     justify-content: center;
-    gap: 30px;
+    animation: fadeInUp .8s ease both;
   }
 
-  .btn {
-    font-weight: 600;
-    font-size: 1.1rem;
-    padding: 15px 35px;
-    border-radius: 40px;
+  .btn-primary {
+    display: inline-block;
+    font-weight: 700;
+    padding: 12px 28px;
+    border-radius: 28px;
     text-decoration: none;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.15);
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    transition: transform .18s ease, box-shadow .18s ease;
+    box-shadow: 0 6px 16px rgba(0,0,0,0.12);
   }
 
   .btn-yellow {
-    background-color: #F9D976; /* jaune vif mais doux */
+    background-color: var(--gold-pale);
     color: #5a4200;
-    box-shadow: 0 5px 15px rgba(249, 217, 118, 0.5);
+    box-shadow: 0 6px 16px rgba(249, 232, 161, 0.5);
   }
   .btn-yellow:hover,
   .btn-yellow:focus {
-    background-color: #f7c948;
-    box-shadow: 0 6px 20px rgba(247, 201, 72, 0.7);
+    background-color: #f7e37f;
+    box-shadow: 0 10px 22px rgba(247, 243, 135, 0.7);
     outline: none;
   }
 
   .btn-green {
-    background-color: #88C070; /* vert vif mais doux */
-    color: white;
-    box-shadow: 0 5px 15px rgba(136, 192, 112, 0.5);
+    background-color: var(--green-pale);
+    color: #3a5a2a;
+    box-shadow: 0 6px 16px rgba(156, 204, 122, 0.5);
   }
   .btn-green:hover,
   .btn-green:focus {
-    background-color: #72ad5a;
-    box-shadow: 0 6px 20px rgba(114, 173, 90, 0.7);
+    background-color: #8dbf57;
+    box-shadow: 0 10px 22px rgba(141, 191, 87, 0.7);
     outline: none;
   }
 
   footer {
     text-align: center;
-    padding: 20px 0;
-    color: #666666;
-    font-size: 0.9rem;
-  }
-  footer a {
-    color: var(--blue-main);
-    text-decoration: none;
-  }
-  footer a:hover {
-    text-decoration: underline;
+    padding: 26px 16px;
+    color: var(--muted);
+    font-size: 0.92rem;
   }
 
-  /* Animation keyframes */
-  @keyframes fadeIn {
-    to { opacity: 1; }
-  }
-
+  /* Responsive tweaks */
   @media (max-width: 900px) {
-    .section-block {
-      flex: 1 1 45%;
-      margin-bottom: 30px;
+    .section-block { flex: 1 1 45%; }
+  }
+
+  @media (max-width: 640px) {
+    header h1 { font-size: 2.2rem; }
+    header img.logo { height: 72px; }
+    .section-block { flex: 1 1 100%; max-width: 100%; }
+    .section-block img { height: auto; object-fit: contain; }
+    .btn-row {
+      flex-direction: column;
+      gap: 12px;
     }
   }
-  @media (max-width: 600px) {
-    header {
-      flex-direction: column;
-      gap: 10px;
-    }
-    header h1 {
-      font-size: 2.4rem;
-    }
-    nav {
-      padding: 0 10px;
-    }
-    .menu {
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .section-block {
-      flex: 1 1 100%;
-      margin-bottom: 30px;
-      max-width: 100%;
-    }
-    .section-block img {
-      height: auto;
-    }
+
+  /* Simple fadeInUp animation */
+  @keyframes fadeInUp {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
   }
 </style>
 </head>
 <body>
 
+  <!-- Header -->
   <header>
     <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
     <h1>Coeur Ouvert</h1>
+    <p class="slogan">Un espace pour parler, être écouté, et retrouver l’espoir</p>
   </header>
 
-  <p class="slogan">Un espace pour parler, être écouté, et retrouver l’espoir</p>
-
+  <!-- Menu -->
   <nav>
     <ul class="menu">
       <li><a href="index.html">Accueil</a></li>
@@ -279,50 +334,49 @@
     </ul>
   </nav>
 
+  <!-- Verset du jour -->
   <div id="daily-verse">Chargement du verset...</div>
 
+  <!-- Main content -->
   <main>
-    <div class="flex-row">
-      <section class="section-block">
-        <h2>Notre mission</h2>
+    <div class="intro" role="region" aria-labelledby="intro-title">
+      <p class="lead"><strong>Tu es une personne de valeur.</strong></p>
+      <p>Nous savons que la vie peut être lourde, pleine de blessures, de doutes et de questions sans réponse. <strong>Coeur Ouvert</strong> est un espace où tu peux déposer tes fardeaux, partager ce que tu vis et trouver des réponses qui restaurent ton cœur.</p>
+      <p>Nous t’accompagnons grâce à l’écoute bienveillante de nos conseillers, la prière (si tu le souhaites), des paroles d’encouragement et des témoignages réels de transformation.</p>
+    </div>
+
+    <div class="flex-row" aria-live="polite">
+      <section class="section-block" aria-labelledby="mission-title">
+        <h2 id="mission-title">Notre mission</h2>
         <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
-        <p>
-          Coeur Ouvert est une plateforme chrétienne dédiée à l’encouragement spirituel 
-          et au coaching personnalisé. Nous partageons chaque jour la Parole de Dieu pour inspirer,
-          accompagner et fortifier ta foi.
-        </p>
+        <p>Faire découvrir l’amour de Dieu : pas pour imposer une religion, mais pour restaurer la relation entre Dieu et l’homme.</p>
       </section>
 
-      <section class="section-block">
-        <h2>Comme Dieu te voit</h2>
+      <section class="section-block" aria-labelledby="comme-dieu-title">
+        <h2 id="comme-dieu-title">Comme Dieu te voit</h2>
         <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
-        <p>
-          Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. 
-          Ne doute jamais de ta valeur, car elle est infinie et inaltérable.
-        </p>
+        <p>Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. Ne doute jamais de ta valeur.</p>
       </section>
 
-      <section class="section-block">
-        <h2>Vivre avec gratitude</h2>
+      <section class="section-block" aria-labelledby="gratitude-title">
+        <h2 id="gratitude-title">Vivre avec gratitude</h2>
         <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/grateful.png" alt="Vivre avec gratitude" />
-        <p>
-          La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. 
-          Chaque jour est une nouvelle occasion de remercier pour les bénédictions, grandes ou petites.
-        </p>
+        <p>La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. Chaque jour est une nouvelle occasion de remercier pour les bénédictions, grandes ou petites.</p>
       </section>
     </div>
 
-    <div class="btn-row">
-      <a href="coaching.html" class="btn btn-yellow">Parler à un conseiller</a>
-      <a href="temoignages.html" class="btn btn-green">Lire des témoignages</a>
+    <!-- Boutons -->
+    <div class="btn-row" role="region" aria-label="Actions">
+      <a href="coaching.html" class="btn-primary btn-yellow" role="button">Parler à un conseiller</a>
+      <a href="temoignages.html" class="btn-primary btn-green" role="button">Lire des témoignages</a>
     </div>
-
   </main>
 
   <footer>
     &copy; 2025 Coeur Ouvert — <a href="contact.html">Contact</a>
   </footer>
 
+  <!-- Verset script -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       fetch("verses.json")
@@ -346,6 +400,23 @@
           document.getElementById("daily-verse").textContent =
             "Impossible de charger le verset du jour.";
         });
+    });
+  </script>
+
+  <!-- Fade-in on scroll script -->
+  <script>
+    function onEntry(entry) {
+      entry.forEach(change => {
+        if (change.isIntersecting) {
+          change.target.classList.add('visible');
+        }
+      });
+    }
+
+    let options = { threshold: [0.2] };
+    let observer = new IntersectionObserver(onEntry, options);
+    document.querySelectorAll('.section-block').forEach(block => {
+      observer.observe(block);
     });
   </script>
 
